--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,3 @@
-# MONGO_URI=mongodb://localhost:27017/myDatabase
-# # JWT_SECRET=mySuperSecretKey
-# # PORT=5000
-MONGO_URI=mongodb://localhost:27017/taskmanagement
+MONGO_URI=mongodb://localhost:27017/taskManager
+SECRET_KEY=mysecretkey
+PORT=5000
